# implicit-memory-system-webui

./: CLAUDE.md  PLAN.md  README.md  README_WEBUI.md  article-notes.md  pyproject.toml  run_webui.sh
backend/: main.py
backend/core/: conversation.py
frontend/: index.html
frontend/static/css/: custom.css
frontend/static/js/: app.js  chat.js  memory.js  sessions.js
memory/memories-init/: project_solo_entrepreneur_app.txt  user_preferences.txt
prompts/: concise prompt_explanatory.txt  more precise prompt.txt  more precise prompt_explanatory.txt
scripts/: generate_sequence_diagram.py
