[project]
name = "memory-system-v2"
version = "2.0.0"
description = "Companion app for 'The Memory Illusion v2' - demonstrating Claude's autonomous memory management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
